[tool.poetry]
name = "logging-utils-tddschn"
version = "0.1.5"
description = "Logging utilities for personal use."
authors = ["Xinyuan Chen <45612704+tddschn@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/tddschn/logging-utils-tddschn"
repository = "https://github.com/tddschn/logging-utils-tddschn"
classifiers = [
	"Intended Audience :: Developers",
	"Topic :: System :: Logging",
	"Topic :: Utilities",
]
keywords = ["logging"]


[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
